2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: is_present() doesn't exactly check for any dependencies that
	could be pulled in with real_install. So restrict this to single packages
	and use phase_activate.

2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Remove leading whitespace in Info2, without breaking
	RFC-822. All of 10.4-transitional indexes fine with this. dmacks, please
	check that this is ok!

2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Remove build-as-nobody warning, it's been well enough
	tested by now I'd say.

2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Document some functions.
	* PkgVersion.pm, Engine.pm: Replace 'parentessential' concept with
	built_with_essential function, which should make it possible for an
	essential package to be a splitoff.

2005-07-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Separate dep checking and dep switching, so we don't switch
	unnecessarily.

2005-07-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: revised "switch debs during long builds" code: if a 
	needed .deb exists but is not installed, we install it without 
	asking.  (If it doesn't exist, we allow the process to continue --
	it will quit with an error, and the user must then start over.)
	
2005-07-28  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: cleanup_debs: don't delete .deb of pkgs that are
	installed but have no .info.

2005-07-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Stash the fink PID in the buildlock package.

2005-07-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Get rid of gensym, not needed in perl >= 5.6.0.

2005-07-26  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix cleanup_sources source filename parsing. Better
	diagnostics during cleanup_sources and cleanup_debs dead time.

2005-07-25  Dave Morrison  <dmrrsn@users.sourceforge.net>
