@@ -1,5 +1,12 @@
 2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
+	* PkgVersion.pm: Add 'provides' option to match_package, to find packages
+	that are only virtual.
+	* Engine.pm: Enable 'fink desc foo' finding provided packages, fixing bug
+	#755128 .
+	
+2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
 	* Engine.pm: is_present() doesn't exactly check for any dependencies that
 	could be pulled in with real_install. So restrict this to single packages
 	and use phase_activate.
